data/derived/sp14/progs/unify/prog4290.ml.out
Characters 325-326:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a * int list -> int * int -> int list
       but an expression was expected of type
         'a * int list -> int * int -> 'a * int list
       Type int list is not compatible with type 'a * int list 
